--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -7,11 +7,34 @@
     <title>Covid</title>
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link
+      rel="stylesheet"
       type="text/css"
       href="{% static 'css/style.css' %}"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
   <body>
+    <header class="navbar-fixed">
+      <nav>
+        <div class="nav-wrapper">
+          <ul>
+            <li>
+              <a href="/" class="left brand-logo">&nbsp;&nbsp;COVID</a>
+            </li>
+          </ul>
+          <ul class="right">
+            <!-- Add if user authenticated here  -->
+            <li><a href="">Profile</a></li>
+            <li><a href="{% url 'logout' %}">Log Out</a></li>
+            <li><a href="{% url 'login' %}">Log In</a></li>
+            <li><a href="{% url 'signup' %}">Sign Up</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
     <main>
       {% block content %} {% endblock %}
     </main>
