--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %} {% block content %}
 
-<h1>Sign Up</h1>
+<section class="forms">
+  <h4>Sign Up</h4>
 
-{% if error_message %}
-<p class="red-text">{{ error_message }}</p>
-{% endif %}
+  {% if error_message %}
+  <p class="red-text">{{ error_message }}</p>
+  {% endif %}
 
-<form class="signup" method="post" action="{% url 'signup' %}">
-  {% csrf_token %} {{ form.as_p }}
-  <input type="submit" class="btn" value="signup" />
-</form>
+  <form class="signup" method="post" action="{% url 'signup' %}">
+    {% csrf_token %} {{ form.as_p }}
+    <input type="submit" class="btn" value="signup" />
+  </form>
+</section>
 
 {% endblock %}
