feat: Updated profile to show activites, add an activity and delete activity

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -86,26 +86,18 @@
         <main>
             {% block content %} {% endblock %}
         </main>
-        <<<<<<< Updated upstream <footer class="page-footer">
-            <<<<<<< HEAD All Rights Reserved &copy; 2020 &nbsp; </footer>
-</body>
-All Rights Reserved &copy; 2020 &nbsp;
-</footer>
-</body>
+        <footer class="page-footer">
+            All Rights Reserved &copy; 2020 &nbsp; </footer>
 
-
-</html>
-
-
-<script>
-    $(document).ready(function() {
-        $(".sidenav").sidenav({
-            full_width: true
-        });
-    });
-</script>
-$(document).ready(function () { $(".sidenav").sidenav({full_width: true}); });
-</script>
+        <script>
+            $(document).ready(function() {
+                $(".sidenav").sidenav({
+                    full_width: true
+                });
+            });
+        </script>
+        $(document).ready(function () { $(".sidenav").sidenav({full_width: true}); });
+        </script>
 
 </body>
 
