--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -108,11 +108,15 @@ their personalized stats else show default  -->
           {% elif activity.0.factor <= 10 and activity.0.factor > 6 %}
           <h4>YOU'RE VERY RISKY</h4>
           {% endif %}
-          {% if selected_activity %}
-          <p><b>{{selected_activity}}</b>&nbsphas a <b>{{activity.0.risk}}</b> risk level</p>
+          {% if selected_activities %}
+          {% for a in selected_activities %}
+          <p><b>{{a}}</b>&nbsphas a <b>{{activity.0.risk}}</b> risk level</p>
+          <!-- Take factors for all activities and find an average, if the number is a certain number assign it a risk level -->
+          {% endfor %}
           {% else %}
           <p>No activity selected</p>
-          {%endif%}
+          {%endif%} 
+          <p>Your overall risk level is</p>
         </div>
         <div class="modal-footer">
           <a href="#!" class="modal-close waves-effect waves-green btn-flat" 
@@ -212,8 +216,8 @@ their personalized stats else show default  -->
           {% elif activity.0.factor <= 10 and activity.0.factor > 6 %}
           <h4>YOU'RE VERY RISKY</h4>
           {% endif %}
-          {% if selected_activity %}
-          <p><b>{{selected_activity}}</b>&nbsphas a <b>{{activity.0.risk}}</b> risk level</p>
+          {% if selected_activities %}
+          <p><b>{{single_activity}}</b>&nbsphas a <b>{{activity.0.risk}}</b> risk level</p>
           {% else %}
           <p>No activity selected</p>
           {%endif%}
